--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,56 +1,138 @@
- 
- 
- html, body {
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	background: rgb(255,255,255);
 
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	-webkit-tap-highlight-color: rgba(0,0,0,0);
+* {
+    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
+
 body {
-	margin: 0 0.9em 0 0.9em;
-	font-size: 150%;
-	font-size: 7.5vw;
+    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
+    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
+    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
+    background-color:#E4E4E4;
+    background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image:-webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image:-ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image:-webkit-gradient(
+        linear,
+        left top,
+        left bottom,
+        color-stop(0, #A7A7A7),
+        color-stop(0.51, #E4E4E4)
+    );
+    background-attachment:fixed;
+    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    font-size:12px;
+    height:100%;
+    margin:0px;
+    padding:0px;
+    text-transform:uppercase;
+    width:100%;
+}
+
+/* Portrait layout (default) */
+.app {
+    background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
+    position:absolute;             /* position in the center of the screen */
+    left:50%;
+    top:50%;
+    height:50px;                   /* text area height */
+    width:225px;                   /* text area width */
+    text-align:center;
+    padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
+    margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
+                                   /* offset horizontal: half of text area width */
+}
+
+/* Landscape layout (with min-width) */
+@media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
+    .app {
+        background-position:left center;
+        padding:75px 0px 75px 170px;  /* padding-top + padding-bottom + text area = image height */
+        margin:-90px 0px 0px -198px;  /* offset vertical: half of image height */
+                                      /* offset horizontal: half of image width and text area width */
+    }
 }
 
 
-/*  ----------------------------------------------------------
-					POPUP
-	---------------------------------------------------------- */
+#map {
+    height: 100%;
+}
 
-.InforDiv {
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.controls {
+    margin-top: 15%;
+    border: 1px solid transparent;
+    border-radius: 2px 0 0 2px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    height: 45px;
+    outline: none;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
+
+#pac-input {
+    background-color: #fff;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+    margin-left: 12px;
+    padding: 0 11px 0 13px;
+    text-overflow: ellipsis;
+    width: 300px;
+}
+
+#pac-input:focus {
+    border-color: #4d90fe;
+}
+
+.pac-container {
+    font-family: Roboto;
+}
+
+#type-selector {
+    color: #fff;
+    background-color: #4d90fe;
+    padding: 5px 11px 0px 11px;
+}
+
+#type-selector label {
+    font-family: Roboto;
+    font-size: 13px;
+    font-weight: 300;
+}
+#target {
+    width: 345px;
+
+}
+.modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
-    padding-top: 50%; /* Location of the box */
+    padding-top: 10%; /* Location of the box */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
 }
 
- 
-.InforDiv-content {
+/* Modal Content */
+.modal-content {
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%;
-	-vendor-animation-duration: 4s;
-	-vendor-animation-delay: 3s;	
+    width: 70%;
+	height: 75%
 }
 
- 
+/* The Close Button */
 .close {
     color: #aaaaaa;
     float: right;
@@ -65,281 +147,78 @@ body {
     cursor: pointer;
 }
 
-/*  ----------------------------------------------------------
-					NAVIGATION BAR CODE
-	---------------------------------------------------------- */
-	
-	
-#form{
-	box-sizing: border-box; /* Width & height includes padding & border. */
-
-	position: fixed;
-	top: 54px;
-	left: 0;
-	right: 0;
+.button {
+    background-color: #008CBA; /* Green */
+    border: none;
+    color: white;
+    padding: 3% 8%;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
     
-	width: 100%;
-	height: 45px;
-	line-height: 45px;
- 	background:#5cafe1;
+	margin: 2% 20% 20% 30%;
+    cursor: pointer;
+    font-family: Noto Serif;
+}
 
-	}
-	#mapaBu{
-	width:50%;
+.imagem{
+	margin: 3% 5% 10% 20%;
+	padding: 3% 8%;
+	width: 45%;
+	height: 30%;
+	background-color:#1c78b3;
+}
+
+.titulo{
+	border: none;
+	font-weight: bold;
+	font-size: 28px;
+	margin:3% 25%;
+	font-size: 150%;
+}
+
+.tempo{
+	border-bottom:none;
+	border-left:none;
+	border-top:none;
+	border-right-width:2%;
+	font-weight: bold;
+	font-size: 20px;
+	width: 15%;
+	margin:2% 0 5% 30%;
 	float:left;
-	text-align:center;
-	font-size:28px;
-	background-color:#18608d;
-    color:white;
-	font-family:ubuntu;
-	}
-	#buscaBu{
-	width:50%;
+}
+
+.box {
+ width: 50%;
+ float: left;
+ height: 70px;/*Altura da linha*/
+}
+
+.linha-vertical {
+ border-left: 2px solid;/* Adiciona borda esquerda na div como ser fosse uma linha.*/
+ box-sizing: border-box;
+}
+
+.center{
+	margin: 2% 0 2% 25%;
 	float:left;
-	text-align:center;
-	font-size:28px;
-	background-color:#5cafe1;
-	color:white;
-	font-family:arial;
-	}
-	
-	
-/*  ----------------------------------------------------------
-					         Hide
-	---------------------------------------------------------- */
-	
+	font-size: 150%;
+}
+
+.dots{
+	clear: left;
+	margin: 2% 0 5% 25%;
+}
+
+.barrapreco{
+	clear: left;
+	margin: 2% 0 5% 30%;
+	font-size: 200%;
+}
+
 .hidden {
     display: none;
-	
 }
-
-
-/*  ----------------------------------------------------------
-					    Page of the app
-	---------------------------------------------------------- */
-
-.page{
-	position: fixed;
-	width:105%;
-	left: 14px;
-	top: 110px;
-}
-
- 
-.bords {
-    border-width: medium;
-    border-style: solid;
-    border-color: #5cafe1;
-}
-
-
-/*  ----------------------------------------------------------
-					    Select Box
-	---------------------------------------------------------- */
-
-.selc{
-    width:200px;
-    overflow:hidden;
-	text-align-last:center;
-}
-
-.selc select{
-position: fixed;
-  margin: 10px;
-  border: 1px solid #111;
-  background: transparent;
-  width: 150px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  height: 34px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background: transparent url("../img/br_down.png") no-repeat 95% center;
-}
-
-/*  ----------------------------------------------------------
-								HEADER
-	---------------------------------------------------------- */
-
-/* The header's height is determined by the contained text's font size. */
-header {
-	box-sizing: border-box; /* Width & height includes padding & border. */
-
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-
-	width: 100%;
-	height: 56px;
-	line-height: 56px;
-
-	
-
-	text-align: center;
-	vertical-align: middle;
-
-	background: #166b99;
-
-	z-index: 1000;
-}
-header button {
-	display: block;
-	position: absolute;
-	top: 30%;
-	max-height: 70%;
-
-	margin: 0;
-
-	font-size: 30%;
-
-	-webkit-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	transform: translateY(-50%);
-}
-header button.back {
-	position: absolute;
-	left: 0;
-
-	height: 150%;
-	margin: 0;
-	padding: 0 0 0 15px;
-
-	/* Font size is percentage of the header's font size. */
-	font-size: 140%;
-	color: #000;
-
-	text-align: left;
-
-	background: none;
-
-	border-radius: 0;
-	border: none;
-
-	box-shadow: none;
-}
-
-
-header button.back img {
-	height: 0.5em;
-}
-header img.logotype {
-	position: absolute;
-	top: 50%;
-	left: 0;
-	right: 0;
-
-	height: 50%;
-
-	margin: 0 auto;
-
-	-webkit-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	transform: translateY(-50%);
-}
-
-
-/*  ----------------------------------------------------------
-								LISTA
-	---------------------------------------------------------- */
-
-#bairros{
-	padding: 0 15% 0 0;
-	margin: 0px auto;
-	text-align:center;
-	color:#18608d;
-	font-weight:bold;
-	font-family:impact;
-	font-size:23px;
-}
-#texto{
-	padding: 0 12.5% 0 0;
-	margin: 0px auto;
-	text-align:center;
-}
-#inputbairros{
-	width:75%;
-	border:1px solid lightgray;
-}
-
-
-#caixasugestao{
-	background-color:red;
-	width:87%;
-	margin:6% 0 0 0;
-	background-color:#f2f2f2;
-	text-align:center;
-}
-
-p:nth-child(even) {background: #FFF}
-p:nth-child(odd) {background: #EEE}
-
-#caixasugestao p:active{
-	background-color:#5cafe1;
-	color:#fff;
-}
-
-a {
-	color: #52afb8; /* Default color: "Blue Hue" (dark variant) */
-}
-
-p {
-	margin: 0.4em 0 0.4em 0;
-	padding: 0;
-
-	font-size: 63%;
-	line-height: 1.5;
-}
-
-table {
-	table-layout: fixed;
-	width: 100%;
-	font-size: 63%;
-	text-align: left;
-}
-
-input {
-	margin: 0;
-	padding: 0;
-
-	border: none;
-
-	font-family: inherit;
-	font-size: 63%;
-}
-
-input[type="text"],input[type="url"],input[type="tel"],input[type="password"],
-input[type="email"],input[type="search"],input[type="number"],
-input[type="date"],input[type="month"],input[type="week"],input[type="time"] {
-	width: 50%;
-
-	padding: 7px 14px 7px 14px;
-
-	font-family: inherit;
-	font-size: 63%;
-	color: #000;
-
-	border-radius: 4px;
-	border: none;
-
-	background-color: #f3f3f3; /* Default color: "Arctic". */
-}
-
-textarea {
-	box-sizing: border-box; /* Width & height includes padding & border. */
-	width: 100%;
-
-	padding: 7px 14px 7px 14px;
-
-	border-radius: 4px;
-	border: none;
-
-	font-family: inherit;
-	font-size: 63%;
-	line-height: 1.5;
-
-	background-color: #f3f3f3; /* Default color: "Arctic". */
-}
-
 
