--- a/www/css/index.css
+++ b/www/css/index.css
@@ -148,7 +148,7 @@ html, body {
 }
 
 .button {
-    background-color: #008CBA; /* Green */
+    background-color: #008CBA; /* blue */
     border: none;
     color: white;
     padding: 3% 8%;
@@ -222,3 +222,23 @@ html, body {
     display: none;
 }
 
+.round-button {
+    margin:0.2%; /*distancia da borda*/
+    width: 3%;
+    height: 0;
+    padding-bottom: 3%;
+    border-radius: 50%;
+    border: 2px solid #f5f5f5;
+    overflow: hidden;
+    background: #5cafe1;
+    box-shadow: 0 0 3px gray;
+}
+.round-button:hover {
+    background: #262626;
+}
+.round-button img {
+    display: block;
+    width: 75%;
+    padding: 12%;
+    height: auto;
+}
