--- a/www/css/index.css
+++ b/www/css/index.css
@@ -77,6 +77,7 @@ html, body {
 #pac-input {
     background-color: #fff;
     font-family: Roboto;
+    text-align:center;
     font-size: 15px;
     font-weight: 300;
     margin-left: 12px;
