--- a/platforms/android/assets/www/css/index.css
+++ b/platforms/android/assets/www/css/index.css
@@ -26,6 +26,7 @@ body {
     padding:0px;
     text-transform:uppercase;
     width:100%;
+
 }
 
 /* Portrait layout (default) */
@@ -77,6 +78,7 @@ html, body {
 #pac-input {
     background-color: #fff;
     font-family: Roboto;
+    text-align:center;
     font-size: 15px;
     font-weight: 300;
     margin-left: 12px;
@@ -148,7 +150,7 @@ html, body {
 }
 
 .button {
-    background-color: #008CBA; /* Green */
+    background-color: #008CBA; /* blue */
     border: none;
     color: white;
     padding: 3% 8%;
@@ -222,3 +224,20 @@ html, body {
     display: none;
 }
 
+.round-button {
+    margin:1%; /*distancia da borda*/
+    width: 10%;
+    height: 0;
+    padding-bottom: 10%;
+    border-radius: 50%;
+    border: 2px solid #f5f5f5;
+    overflow: hidden;
+    background: #5cafe1;
+    box-shadow: 0 0 3px gray;
+}
+.round-button img {
+    display: block;
+    width: 75%;
+    padding: 12%;
+    height: auto;
+}
