--- a/www/css/index.css
+++ b/www/css/index.css
@@ -240,3 +240,10 @@ html, body {
     padding: 12%;
     height: auto;
 }
+
+p {
+    margin: 0.4em 0 0.4em 0;
+    padding: 0;
+    font-size: 63%;
+    line-height: 1.5;
+}
