--- a/platforms/android/assets/www/css/index.css
+++ b/platforms/android/assets/www/css/index.css
@@ -26,7 +26,6 @@ body {
     padding:0px;
     text-transform:uppercase;
     width:100%;
-
 }
 
 /* Portrait layout (default) */
@@ -65,12 +64,13 @@ html, body {
 }
 
 .controls {
-    margin-top: 15%;
+    margin-top: 8.5%;
     border: 1px solid transparent;
     border-radius: 2px 0 0 2px;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     height: 45px;
+	width: 100%;
     outline: none;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
@@ -81,10 +81,9 @@ html, body {
     text-align:center;
     font-size: 15px;
     font-weight: 300;
-    margin-left: 12px;
     padding: 0 11px 0 13px;
     text-overflow: ellipsis;
-    width: 300px;
+    width: 95%;
 }
 
 #pac-input:focus {
@@ -225,19 +224,28 @@ html, body {
 }
 
 .round-button {
-    margin:1%; /*distancia da borda*/
-    width: 10%;
+    margin:3%; /*distancia da borda*/
+    width: 48px;
     height: 0;
-    padding-bottom: 10%;
+    padding-bottom: 48px;
     border-radius: 50%;
     border: 2px solid #f5f5f5;
     overflow: hidden;
     background: #5cafe1;
     box-shadow: 0 0 3px gray;
 }
+
+
 .round-button img {
     display: block;
     width: 75%;
     padding: 12%;
     height: auto;
+}
+
+p {
+    margin: 0.4em 0 0.4em 0;
+    padding: 0;
+    font-size: 63%;
+    line-height: 1.5;
 }
