--- a/platforms/android/assets/www/css/index.css
+++ b/platforms/android/assets/www/css/index.css
@@ -24,7 +24,6 @@ body {
     height:100%;
     margin:0px;
     padding:0px;
-    text-transform:uppercase;
     width:100%;
 }
 
@@ -234,12 +233,17 @@ html, body {
     box-shadow: 0 0 3px gray;
 }
 
-
 .round-button img {
     display: block;
     width: 75%;
     padding: 12%;
     height: auto;
+}
+
+
+.round-button:active {
+     box-shadow: 0 2px #666;
+	transform: translateY(4px);
 }
 
 p {
@@ -264,11 +268,32 @@ p {
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-/* termo Content */
+/* Modal Content */
 .termo-content {
     background-color: #fefefe;
     margin: auto;
-    padding: 20px;
+    padding: 4%;
     border: 1px solid #888;
     width: 80%;
+    
 }
+.TextoTermo{
+	overflow: scroll;
+	font-size: 15px;
+}
+
+.BtnCompromisso input[type="radio"] {
+  width: 15px;
+}
+
+.BtnCompromisso label {
+  display: inline;
+  margin-left: 5px;
+}
+
+.termo-content Form{
+	padding-top: 2%;
+    text-align: center;
+}
+
+
